[gd_scene load_steps=6 format=3 uid="uid://i4e8g3h2i4j5k"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://bvnq8x7r2k3m1" path="res://scenes/Player.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://c8x2m9k4n5p6q" path="res://scenes/DragonWhelp.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://d9y3n8o6p7q8r" path="res://scenes/AncientDragon.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://f1b5c0d9e0f1g" path="res://scenes/DragonGem.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://g2c6d1e0f2g3h" path="res://scenes/HealthPotion.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://h3d7f2g1h3i4j" path="res://scenes/Hazard.tscn" id="7"]
[ext_resource type="Texture2D" path="res://assets/background.png" id="8"]

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("8")
centered = false

[node name="Platforms" type="Node2D" parent="."]

[node name="Ground" type="StaticBody2D" parent="Platforms"]
position = Vector2(512, 700)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/Ground"]
shape = SubResource("RectangleShape2D_1")

[node name="Platform1" type="StaticBody2D" parent="Platforms"]
position = Vector2(200, 550)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/Platform1"]
shape = SubResource("RectangleShape2D_2")

[node name="Platform2" type="StaticBody2D" parent="Platforms"]
position = Vector2(600, 450)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/Platform2"]
shape = SubResource("RectangleShape2D_2"]

[node name="Platform3" type="StaticBody2D" parent="Platforms"]
position = Vector2(400, 350)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/Platform3"]
shape = SubResource("RectangleShape2D_2"]

[node name="Player" parent="." instance=ExtResource("2")]
position = Vector2(100, 600)

[node name="Enemies" type="Node2D" parent="."]

[node name="DragonWhelp1" parent="Enemies" instance=ExtResource("3")]
position = Vector2(300, 500)

[node name="DragonWhelp2" parent="Enemies" instance=ExtResource("3")]
position = Vector2(700, 400)

[node name="AncientDragon" parent="Enemies" instance=ExtResource("4")]
position = Vector2(800, 300)

[node name="Collectibles" type="Node2D" parent="."]

[node name="DragonGem1" parent="Collectibles" instance=ExtResource("5")]
position = Vector2(200, 500)

[node name="DragonGem2" parent="Collectibles" instance=ExtResource("5")]
position = Vector2(600, 400)

[node name="DragonGem3" parent="Collectibles" instance=ExtResource("5")]
position = Vector2(400, 300)

[node name="HealthPotion1" parent="Collectibles" instance=ExtResource("6")]
position = Vector2(350, 500)

[node name="HealthPotion2" parent="Collectibles" instance=ExtResource("6")]
position = Vector2(650, 400)

[node name="Hazards" type="Node2D" parent="."]

[node name="Spike1" parent="Hazards" instance=ExtResource("7")]
position = Vector2(450, 684)

[node name="Spike2" parent="Hazards" instance=ExtResource("7")]
position = Vector2(550, 684)

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ScoreLabel" type="Label" parent="HUD"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 50.0
text = "Score: 0"
theme_override_font_sizes/font_size = 24

[node name="HealthLabel" type="Label" parent="HUD"]
layout_mode = 0
offset_left = 20.0
offset_top = 60.0
offset_right = 200.0
offset_bottom = 90.0
text = "Health: 100/100"
theme_override_font_sizes/font_size = 24

[node name="HighScoreLabel" type="Label" parent="HUD"]
layout_mode = 0
offset_left = 20.0
offset_top = 100.0
offset_right = 250.0
offset_bottom = 130.0
text = "High Score: 0"
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(1, 0.8, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(1024, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2"]
size = Vector2(150, 20)